<resources>
    <!-- App name -->
    <string name="app_name">MooDish</string>
    <string name="moodish">MooDish</string>
    
    <!-- Mood categories -->
    <string name="romantic">Romantic</string>
    <string name="family">Family</string>
    <string name="solo">Solo</string>
    <string name="happy">Happy</string>
    <string name="more">More</string>
    <string name="all">All</string>
    
    <!-- Login screen strings -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="app_logo">App Logo</string>
    
    <!-- Sign up screen strings -->
    <string name="name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>

    <!-- Profile screen strings -->
    <string name="profile">Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="change_photo">Change Photo</string>
    <string name="last_login">Last Login:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>

    <!-- Bottom navigation strings -->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_add">Add</string>
    <string name="menu_my_posts">My Posts</string>

    <!-- Bottom create post strings -->
    <string name="add_post">Add Post</string>
    <string name="enter_your_post">Enter your post…</string>
    <string name="select_image">Select Image</string>
    <string name="create_post">Create Post</string>
    <string name="save_post">Save Post</string>

    <!-- Edit post strings -->
    <string name="edit_post">Edit post</string>
    <string name="edit_post_text">Enter post text</string>
    <string name="edit_post_image">Change Image</string>
    <string name="edit_post_label">Select Label:</string>

    <!-- Search Restaurant strings -->
    <string name="search_restaurant">Search Restaurant</string>
    <string name="search_city">Enter city name</string>
    <string name="search">Search</string>
</resources>