<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/nav_create_post"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add" />
    <item
        android:id="@+id/nav_my_posts"
        android:icon="@drawable/ic_menu_my_posts"
        android:title="@string/menu_my_posts" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/menu_profile" />
</menu> 