<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvProfileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/moodish_coral"
        android:padding="16dp"
        android:text="@string/create_post"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPostText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/enter_your_post"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvProfileTitle" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPostText" />

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_image"
        app:layout_constraintTop_toBottomOf="@id/ivPostImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/chkRomantic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/romantic"
        app:layout_constraintTop_toBottomOf="@id/btnSelectImage"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/chkSolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/solo"
        app:layout_constraintTop_toBottomOf="@id/chkRomantic"
        app:layout_constraintStart_toStartOf="@id/chkRomantic"/>

    <CheckBox
        android:id="@+id/chkFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/family"
        app:layout_constraintTop_toBottomOf="@id/chkSolo"
        app:layout_constraintStart_toStartOf="@id/chkRomantic"/>

    <CheckBox
        android:id="@+id/chkHappy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/happy"
        app:layout_constraintTop_toBottomOf="@id/chkFamily"
        app:layout_constraintStart_toStartOf="@id/chkRomantic"/>

    <Button
        android:id="@+id/btnSavePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save_post"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
